--- a/dummy_data.ipynb
+++ b/dummy_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo/GfHKlkN0+AtOmsuOI29",
+      "authorship_tag": "ABX9TyMDILosGU5hZNWQXTj9smlr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -530,6 +530,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# This first exploration may be useful for a client to see which channel generates the most revenue on average. It is a frequent question that marketers want to have answered and a quick look at the data is appreciated."
+      ],
+      "metadata": {
+        "id": "ePOiRrERxtq6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Mean CPC per source\n",
         "for source, df in source_dfs.items():\n",
         "    mean_cpc = df['CPC'].mean()\n",
@@ -562,6 +573,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Similarly to the previous answer, it is a question that those of us who work in marketing data are often asked. This sort of information is oftentimes included in reports and is oftentimes sought out."
+      ],
+      "metadata": {
+        "id": "Mjzj4uptyKVw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Exploring relationship between date and purchase\n",
         "# Convert 'date' column to datetime\n",
         "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -590,7 +612,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 358
+          "height": 484
         },
         "id": "9laHhgcyYtmK",
         "outputId": "39a5441c-a1e3-4855-83b0-69728e09c551"
@@ -618,6 +640,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Seasonality is very important for business owners and thus marketers - they need to know about any peaks or trends that can be found in purchase data. As you already know from the quick info in the submitted form, these are generated data, but this is where we could potentially see any semblance of seasonality if there was any."
+      ],
+      "metadata": {
+        "id": "NO-7xT87yfQR"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -652,6 +685,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# In this section, we would have liked to explore the relationship between bounce rate and conversion rate. Our hypothesis was (would be) that bounce rate and conversion rate are in inverse proportion - the higher the bounce rate, the lower the conversion rate. Food for thought and something to keep in mind in future explorations: could we see a great(er) bounce rate and a great(er) conversion rate if our landing page was super informative and only relevant visitors stayed on the website to become customers?\n",
+        ""
+      ],
+      "metadata": {
+        "id": "UtWOiFxqzULi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
