--- a/dummy_data.ipynb
+++ b/dummy_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDILosGU5hZNWQXTj9smlr",
+      "authorship_tag": "ABX9TyOGTKbcvsGFagj/A0kpwXzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -573,7 +573,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Similarly to the previous answer, it is a question that those of us who work in marketing data are often asked. This sort of information is oftentimes included in reports and is oftentimes sought out."
+        "# Similarly to the previous answer, it is a question that those of us who work in marketing data are often asked. This sort of information is oftentimes included in reports and is sought out."
       ],
       "metadata": {
         "id": "Mjzj4uptyKVw"
@@ -644,7 +644,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Seasonality is very important for business owners and thus marketers - they need to know about any peaks or trends that can be found in purchase data. As you already know from the quick info in the submitted form, these are generated data, but this is where we could potentially see any semblance of seasonality if there was any."
+        "# Seasonality is very important for business owners and thus marketers - they need to know about any peaks or trends that can be found in purchase data that maybe depended on the date, time of the year, or season. As you already know from the quick info in the submitted form, these are generated data, but this is where we could potentially see any semblance of seasonality if there was any. For example, if an e-shop sells swimsuits, we would expect their main season to start before summer, peak during it, and then gradually lower during the colder months."
       ],
       "metadata": {
         "id": "NO-7xT87yfQR"
